yaml_configs/zigbee2mqtt/04-zigbee-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zigbee
  namespace: zigbee
  labels:
    app: zigbee
spec:
  ports:
  - port: 8085
    targetPort: 8080
  selector:
    app: zigbee
  type: LoadBalancer
