yaml_configs/zigbee2mqtt/00-zigbee-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zigbee

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: zigbee2mqtt
  namespace: zigbee
spec:
  selector:
    matchLabels:
      app: zigbee
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: zigbee
      annotations:
        k8s.v1.cni.cncf.io/networks: |
          [{
            "name": "multus-iot",
            "namespace": "default",
            "mac": "70:cb:57:bb:d4:a2",
            "ips": ["192.168.1.194/24"]
          }]
    spec:
      containers:
      - image: koenkk/zigbee2mqtt:latest
        name: zigbee
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
        - name: data
          mountPath: /data
          subPath: data
        - name: usb
          mountPath: /dev/ttyUSB0
        - name: udev
          mountPath: /run/udev
        securityContext:
          privileged: true
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: zigbee-data-pvc
      - name: usb
        hostPath:
          path: /dev/ttyUSB0
      - name: udev
        hostPath:
          path: /run/udev

---

apiVersion: v1
kind: Service
metadata:
  name: zigbee
  namespace: zigbee
  labels:
    app: zigbee
spec:
  ports:
  - port: 8085
    targetPort: 8080
  selector:
    app: zigbee
  type: LoadBalancer


---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zigbee-private
  namespace: zigbee
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-to-https@kubernetescrd
  labels:
    app: zigbee
spec:
  rules:
  - host: zigbee.jsuri.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: zigbee
            port:
              number: 8085
  tls:
  - hosts:
    - zigbee.jsuri.com # Change by your domain
    secretName: zigbee-jsuri-com-tls
